--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 body, ul {
 
     margin: 0;
@@ -88,7 +89,7 @@ a:hover {
 
         padding: 1rem 0;
         margin: 0 1rem;
-        border-bottom: 2px solid rgb(253, 242, 242);
+        border-bottom: 2px solid rgba(253, 242, 242, 0.08);
     }
 
     #btn-mobile {
